Suppress native access warnings (#2954)